--- a/Aravind_FrozenFood_Cuddalore/index.html
+++ b/Aravind_FrozenFood_Cuddalore/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="JAYAM FOODS Frozen Foods | #1 Hotel & Restaurant Supplier in Cuddalore">
+    <meta name="title" content="JAYAM FOODS Frozen Foodss | #1 Hotel & Restaurant Supplier in Cuddalore">
     <meta name="description" content="Premium frozen food distributor in Cuddalore. Supplying Veg, Paneer, Chicken Momos, Meats, and Seafood to hotels and restaurants with 100% cold chain reliability.">
     <meta name="keywords" content="Frozen food supplier Cuddalore, Chicken Momos wholesale, Frozen snacks distributor, Hotel food supply Cuddalore, JAYAM FOODS Frozen Foods">
 
@@ -321,4 +321,5 @@
         });
     </script>
 </body>
+
 </html>
