Space at top index.html

--- a/Aravind_FrozenFood_Cuddalore/index.html
+++ b/Aravind_FrozenFood_Cuddalore/index.html
@@ -47,7 +47,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6" data-aos="fade-up">
-                    <div class="status-badge mb-3"><i class="fa-solid fa-circle-check text-success me-2"></i>Trusted by 100+ Cuddalore Hotels</div>
+                    <div class="status-badge mb-3 mt-2"><i class="fa-solid fa-circle-check text-success me-2"></i>Trusted by 100+ Cuddalore Hotels</div>
                     <h1 class="display-3 fw-bold mb-4">Quality Frozen Foods <span class="text-gradient">Delivered Daily.</span></h1>
                     <p class="lead text-muted mb-5">Scale your restaurant efficiency with JAYAM FOODS's premium frozen supply. Freshness locked, flavor guaranteed.</p>
                     <div class="d-flex flex-wrap gap-3">
@@ -349,3 +349,4 @@
 
 </body>
 </html>
+
