--- a/Aravind_FrozenFood_Cuddalore/index.html
+++ b/Aravind_FrozenFood_Cuddalore/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Frozen food supplier Cuddalore, Chicken Momos wholesale, Frozen snacks distributor, Hotel food supply Cuddalore, JAYAM FOODS Frozen Foods">
 
     <meta property="og:type" content="website">
+    <meta name="google-site-verification" content="GGVKDsR06mu6bhcrnXHdX0DO7ABi9kckBYlY-DPyGA4" />
     <meta property="og:url" content="https://jayam-foods.netlify.app/">
     <meta name="theme-color" content="#2563eb">
 
@@ -349,5 +350,6 @@
 
 </body>
 </html>
+
 
 
