--- a/Aravind_FrozenFood_Cuddalore/index.html
+++ b/Aravind_FrozenFood_Cuddalore/index.html
@@ -9,6 +9,9 @@
 
     <meta property="og:type" content="website">
     <meta name="google-site-verification" content="GGVKDsR06mu6bhcrnXHdX0DO7ABi9kckBYlY-DPyGA4" />
+    <link rel="canonical" href="https://jayam-foods.netlify.app/">
+    <meta name="robots" content="index, follow">
+
     <meta property="og:url" content="https://jayam-foods.netlify.app/">
     <meta name="theme-color" content="#2563eb">
 
@@ -350,6 +353,7 @@
 
 </body>
 </html>
+
 
 
 
