--- a/Aravind_FrozenFood_Cuddalore/index.html
+++ b/Aravind_FrozenFood_Cuddalore/index.html
@@ -296,7 +296,7 @@
                     <p class="text-muted">Professional Frozen Supply Partner</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="mb-0">Wellington Street, Cuddalore – 607003</p>
+                    <p class="mb-0">No 13/A, Sonagar St, Manjakuppam, Cuddalore Old Town, Tamil Nadu 607003</p>
                     <p class="small text-muted">
                         © <span id="current-year"></span> JAYAM FOODS. All rights reserved. | 
                         Designed by <a href="https://shanasdigital.com" target="_blank" rel="noopener">shanas Digital Agency</a>
@@ -353,6 +353,7 @@
 
 </body>
 </html>
+
 
 
 
